<resources>
    <string name="app_name">NYS Canal Guide</string>
    <string translatable="false" name="app_playstore_url">https://play.google.com/store/apps/details?id=com.AYC.canalguide&amp;hl=en&amp;gl=US</string>

    <string name="title_map">Map</string>
    <string name="title_filter">Filters</string>
    <string name="title_details">Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_share">Share</string>
    <string name="title_app_share">Share NYS Canal Guide to:</string>
    <string name="title_map_type">Map Type</string>
    <string name="description_filters">Add or remove markers on the map by category.</string>
    <string name="text_marker_contact_info">*For more information please contact %s</string>
    <string name="snackbar_text_turn_on_gps">Location services turned off. Turn on?</string>

    <string name="title_filter_lock">Locks</string>
    <string name="title_filter_bridge_gate">Lift Bridges and Guard Gates</string>
    <string name="title_filter_marinas">Marinas and Public Docks</string>
    <string name="title_filter_cruise">Rentals and Cruises</string>
    <string name="title_filter_launches">Boat Ramps and Kayak Launches</string>

    <string name="title_filter_navinfo">Navigation</string>
    <string name="title_filter_navinfo_bridges">Bridges</string>
    <string name="title_filter_navinfo_green_buoys">Green Buoys</string>
    <string name="title_filter_navinfo_red_buoys">Red Buoys</string>
    <string name="title_filter_navinfo_green_beacons">Green Beacons/Lights/Lighthouses</string>
    <string name="title_filter_navinfo_red_beacons">Red Beacons/Lights/Lighthouses</string>
    <string name="title_filter_navinfo_other_beacons">Other Beacons/Lights/Lighthouses</string>

    <string name="content_desc_filters_button">Filters</string>
    <string name="content_desc_call_button">Call</string>
    <string name="content_desc_website_button">Website</string>
    <string name="content_desc_noaa_maps_button">NOAA maps</string>

    <!-- Preferences text -->

    <string name="pref_immerse_mode_off">Off</string>
    <string name="pref_immerse_mode_toggle">Tap to Toggle</string>
    <string name="pref_immerse_mode_on">Always On</string>

    <string name="pref_category_title_general">General</string>
    <string name="pref_category_title_beta">Beta features</string>
    <string name="pref_category_title_about">About</string>

    <string name="title_setting_fullscreen_map">Fullscreen Map</string>
    <string name="title_setting_default_map_type">Default Map Type</string>
    <string name="title_setting_cache_map_filters">Cache Map Filters</string>
    <string name="title_setting_app_version">App Version</string>
    <string name="title_setting_app_developer">App Developer</string>
    <string name="title_setting_open_source_attribution">Open Source Attribution</string>
    <string name="summary_setting_default_map_type">Remember the state of the filter switches</string>
    <string name="summary_setting_fullscreen_map">Choose if you want to hide the system bars while viewing the map\nNote: This feature is expected to work but animations may not be as smooth</string>

    <!-- Non translatable text -->

    <string translatable="false" name="pref_immerse_mode_off_value">OFF</string>
    <string translatable="false" name="pref_immerse_mode_toggle_value">TOGGLE</string>
    <string translatable="false" name="pref_immerse_mode_on_value">ON</string>

    <string translatable="false" name="pref_key_cache_filters">cache_filters</string>
    <string translatable="false" name="pref_key_default_map_type">default_map_type_index</string>
    <string translatable="false" name="pref_key_fullscreen_mode">fullscreen_mode_index</string>
    <string translatable="false" name="pref_key_about_category">about_category</string>

    <string translatable="false" name="pref_key_filter_state_lock">LOCK_FILTER_STATE</string>
    <string translatable="false" name="pref_key_filter_state_bridge">BRIDGE_FILTER_STATE</string>
    <string translatable="false" name="pref_key_filter_state_marina">MARINA_FILTER_STATE</string>
    <string translatable="false" name="pref_key_filter_state_launch">LAUNCH_FILTER_STATE</string>
    <string translatable="false" name="pref_key_filter_state_cruise">CRUISE_FILTER_STATE</string>
    <string translatable="false" name="pref_key_filter_state_navinfo">NAVINFO_FILTER_STATE</string>

    <string translatable="false" name="shared_container_transition_name_filters">shared_filters_container</string>

</resources>
