<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="mapsViewModel"
            type="com.ayc.canalguide.ui.map.MapsViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_filter"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_filters" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchLocks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_filter_lock"
            android:theme="@style/FilterSwitchThemeRed"
            android:checked="@={mapsViewModel.lockFilterState}" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchBridgeGates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_filter_bridge_gate"
            android:theme="@style/FilterSwitchThemeYellow"
            android:checked="@={mapsViewModel.bridgeGateFilterState}" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchBoatLaunches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_filter_launches"
            android:theme="@style/FilterSwitchThemeGreen"
            android:checked="@={mapsViewModel.launchFilterState}" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMarinas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_filter_marinas"
            android:theme="@style/FilterSwitchThemeblue"
            android:checked="@={mapsViewModel.marinaFilterState}" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchBoatRentals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_filter_cruise"
            android:theme="@style/FilterSwitchThemeViolet"
            android:checked="@={mapsViewModel.cruiseFilterState}" />


    </LinearLayout>
</layout>