<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mapContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.map.MapsFragment" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:backgroundTint="@color/mmi_yellow"
        android:clickable="true"
        android:contentDescription="@string/content_desc_filters_button"
        android:focusable="true"
        android:text="@string/title_filter"
        android:transitionName="@string/shared_container_transition_name_filters"
        app:icon="@drawable/ic_baseline_filter_alt_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>