<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mapsViewModel"
            type="com.ayc.canalguide.ui.map.MapsViewModel" />

        <import type="android.view.View"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description_filters" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mmi_red_marker" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchLocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={mapsViewModel.lockFilterState}"
                android:text="@string/title_filter_lock"
                android:theme="@style/FilterSwitchBlueAppTheme" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mmi_yellow_marker" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchBridgeGates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_filter_bridge_gate"
                android:theme="@style/FilterSwitchBlueAppTheme"
                android:checked="@={mapsViewModel.bridgeGateFilterState}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mmi_green_marker" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchBoatLaunches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_filter_launches"
                android:theme="@style/FilterSwitchBlueAppTheme"
                android:checked="@={mapsViewModel.launchFilterState}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mmi_blue_marker" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMarinas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_filter_marinas"
                android:theme="@style/FilterSwitchBlueAppTheme"
                android:checked="@={mapsViewModel.marinaFilterState}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mmi_violet_marker" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchBoatRentals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_filter_cruise"
                android:theme="@style/FilterSwitchBlueAppTheme"
                android:checked="@={mapsViewModel.cruiseFilterState}" />
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchNavInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_filter_navinfo"
            android:theme="@style/FilterSwitchBlueAppTheme"
            android:checked="@={mapsViewModel.navInfoFilterState}" />

        <include
            android:id="@+id/viewFiltersNavinfo"
            layout="@layout/view_filters_navinfo"
            android:visibility="@{mapsViewModel.navInfoFilterState ? View.VISIBLE: View.GONE}"/>
    </LinearLayout>
</layout>