<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ayc.canalguide.ui.details.MarkerDetailsViewModel" />

        <import type="android.text.TextUtils"/>
        <import type="android.view.View"/>
    </data>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.details.MarkerDetailsFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/detailsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </ScrollView>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/ic_call_24"
                        android:visibility="@{TextUtils.isEmpty(viewModel.phoneNumber) ? View.GONE : View.VISIBLE}"
                        android:contentDescription="@string/content_desc_call_button" />

                    <ImageView
                        android:id="@+id/ivWebsite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/ic_action_web_site"
                        android:visibility="@{TextUtils.isEmpty(viewModel.website) ? View.GONE : View.VISIBLE}"
                        android:contentDescription="@string/content_desc_website_button" />

                    <ImageView
                        android:id="@+id/ivWebsiteNoaa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/ic_map_24"
                        android:visibility="@{TextUtils.isEmpty(viewModel.websiteNoaa) ? View.GONE : View.VISIBLE}"
                        android:contentDescription="@string/content_desc_noaa_maps_button" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:name="com.google.android.gms.maps.SupportMapFragment" />
        </LinearLayout>

</layout>